yaml/10-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cowbull
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
