yaml/40-services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: cowbull-svc
    namespace: cowbull
  spec:
    clusterIP: None
    selector:
      app: cowbull-svc
- apiVersion: v1
  kind: Service
  metadata:
    name: cowbull-webapp
    namespace: cowbull
  spec:
    clusterIP: None
    ports:
    - name: cowbull-http
      port: 8080
      protocol: TCP
    selector:
      app: cowbull-webapp
- apiVersion: v1
  kind: Service
  metadata:
    name: redis-svc
    namespace: cowbull
  spec:
    clusterIP: None
    selector:
      app: redis
kind: List
metadata: {}
